maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:2: error: not found: value random2
  var a:Int = random2()
              ^