maze.wallfollower.WallFollowerMaze.scala.code
def keepHandOnSideWall(){
  var a:Int = random2()
  for (i <- 0 to 3){
    if(estFaceMur()){
      droite()
    }
	}
  avance()
}

override def run() {
  while (!estSurBiscuit()){
    keepHandOnSideWall
  }
  prendBiscuit()
}